--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ Released   : 20140215
 <div id="page-wrapper">
 	<div id="welcome" class="container">
 		<div class="title">
-			<h2>Welcome to our website</h2>
+			<h2>Welcome to my website</h2>
 		</div>
-		<p>This is <strong>EarthyBlue</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
-		<img src="images/banner.jpg" class="image image-full" alt="" />
+		<p>這是<strong>我的自傳</strong>, 我使用<a href="http://templated.co" rel="nofollow">TEMPLATED</a>模板.這些建築照片是來自<a href="http://fotogrph.com/"> Fotogrph</a>. </p>
+		<img src="images/banner.jpg" class="image image-full" alt="00000" />
 	</div>
 </div>
 <div class="wrapper">
