--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Released   : 20140215
 		<div class="title">
 			<h2>Welcome to my website</h2>
 		</div>
-		<p>這是<strong>我的自傳</strong>, 我使用<a href="http://templated.co" rel="nofollow">TEMPLATED</a>模板.這些建築照片是來自<a href="http://fotogrph.com/"> Fotogrph</a>. </p>
+		<p>this is 這是<strong>我的自傳</strong>, 我使用<a href="http://templated.co" rel="nofollow">TEMPLATED</a>模板.這些建築照片是來自<a href="http://fotogrph.com/"> Fotogrph</a>. </p>
 		<img src="images/banner.jpg" class="image image-full" alt="00000" />
 	</div>
 </div>
