--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Released   : 20140215
 			<h2>Welcome to my website</h2>
 		</div>
 		<p>這是<strong>我的自傳</strong>, 我使用<a href="http://templated.co" rel="nofollow">TEMPLATED</a>模板.這些建築照片是來自<a href="http://fotogrph.com/"> Fotogrph</a>. 我的興趣是運動還有吃東西，我目前就讀<Strong>勤益科技大學資訊工程系<Strong>，這是DEMO版的網頁。</p>
-		<img src="images/banner.jpg" class="image image-full" alt="00000" />
+		<img src="images/banner.jpg" class="image image-full" alt="" />
 	</div>
 </div>
 <div class="wrapper">
