--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@ Released   : 20140215
 			<h1><a href="#">IAN的網站</a></h1>
 			<div id="menu">
 				<ul>
-					<li class="active"><a href="#" accesskey="1" title="">Homepage</a></li>
-					<li><a href="#" accesskey="2" title="">Our Clients</a></li>
-					<li><a href="#" accesskey="3" title="">About Us</a></li>
-					<li><a href="#" accesskey="4" title="">Careers</a></li>
-					<li><a href="#" accesskey="5" title="">Contact Us</a></li>
+					<li class="active"><a href="#" accesskey="1" title="">主頁</a></li>
+					<li><a href="#" accesskey="2" title="">服務項目</a></li>
+					<li><a href="#" accesskey="3" title="">關於我自己</a></li>
+					<li><a href="#" accesskey="4" title="">面試資訊</a></li>
+					<li><a href="#" accesskey="5" title="">聯絡我</a></li>
 				</ul>
 			</div>
 		</div>
@@ -53,11 +53,8 @@ Released   : 20140215
 	<div id="three-column" class="container">
 		<div><span class="arrow-down"></span></div>
 		<div id="tbox1">
-			<div class="title">
-				<h2>Maecenas luctus</h2>
+			<img src="images/1.jpg" class="image image-full" alt="" />
 			</div>
-			<p>Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac suscipit mauris. Proin eu wisi suscipit nulla suscipit interdum.</p>
-			<a href="#" class="button">Learn More</a> </div>
 		<div id="tbox2">
 			<div class="title">
 				<h2>Integer gravida</h2>
