--- a/index.html
+++ b/index.html
@@ -57,15 +57,24 @@ Released   : 20140215
 			</div>
 		<div id="tbox2">
 			<div class="title">
-				<h2>Integer gravida</h2>
+				<h2>專長</h2>
 			</div>
-			<p>Proin eu wisi suscipit nulla suscipit interdum. Nullam non wisi a sem semper suscipit eleifend. Donec mattis libero eget urna. Duis  velit ac mauris.</p>
+			<ul>
+				<li>焊接電路板</li>
+				<li>JAVA</li>
+				<li>邏輯</li>
+				<li>數理</li>
+			</ul>
 			<a href="#" class="button">Learn More</a> </div>
 		<div id="tbox3">
 			<div class="title">
-				<h2>Praesent mauris</h2>
+				<h2>興趣</h2>
 			</div>
-			<p>Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Nullam non wisi a sem suscipit  eleifend.</p>
+			<ul>
+				<li>籃球</li>
+				<li>煮咖啡</li>
+				<li>玩手遊</li>
+			</ul>
 			<a href="#" class="button">Learn More</a> </div>
 	</div>
 	<div id="portfolio" class="container">
