--- a/index.html
+++ b/index.html
@@ -55,18 +55,22 @@ Released   : 20140215
 		<div id="tbox1">
 			<img src="images/1.jpg" class="image image-full" alt="" />
 			</div>
-		<div id="tbox2">		
-			<h2>專長</h2>			
-			<ul>
+		<div id="tbox2">
+			<div class="title">
+				<h2>專長</h2>
+			</div>
+			<ul class="list">
 				<li>焊接電路板</li>
 				<li>JAVA</li>
 				<li>邏輯</li>
 				<li>數理</li>
 			</ul>
 			<a href="#" class="button">關於我自己</a> </div>
-		<div id="tbox3">			
-			<h2>興趣</h2>			
-			<ul>
+		<div id="tbox3">
+			<div class="title">
+				<h2>興趣</h2>
+			</div>
+			<ul class="list2">
 				<li>籃球</li>
 				<li>煮咖啡</li>
 				<li>玩手遊</li>
