--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Released   : 20140215
 			<div class="title">
 				<h2>專長</h2>
 			</div>
-			<ul class="list">
+			<ul class="style1">
 				<li>焊接電路板</li>
 				<li>JAVA</li>
 				<li>邏輯</li>
@@ -70,7 +70,7 @@ Released   : 20140215
 			<div class="title">
 				<h2>興趣</h2>
 			</div>
-			<ul class="list2">
+			<ul class="style1">
 				<li>籃球</li>
 				<li>煮咖啡</li>
 				<li>玩手遊</li>
