--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Released   : 20140215
 			<img src="images/1.jpg" class="image image-full" alt="" />
 			</div>
 		<div id="tbox2">
-			<div class="title">
+			<div class="title1">
 				<h2>專長</h2>
 			</div>
 			<ul class="style1">
@@ -67,7 +67,7 @@ Released   : 20140215
 			</ul>
 			<a href="#" class="button">關於我自己</a> </div>
 		<div id="tbox3">
-			<div class="title">
+			<div class="title1">
 				<h2>興趣</h2>
 			</div>
 			<ul class="style1">
