--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@ Released   : 20140215
 				<h2>專長</h2>
 			</div>
 			<ul class="style1">
-				<li>焊接電路板</li>
-				<li>JAVA</li>
-				<li>邏輯</li>
-				<li>數理</li>
+				<li>焊接電路板</li><br>
+				<li>JAVA</li><br>
+				<li>邏輯</li><br>
+				<li>數理</li><br>
 			</ul>
 			<a href="#" class="button">關於我自己</a> </div>
 		<div id="tbox3">
@@ -71,9 +71,9 @@ Released   : 20140215
 				<h2>興趣</h2>
 			</div>
 			<ul class="style1">
-				<li>籃球</li>
-				<li>煮咖啡</li>
-				<li>玩手遊</li>
+				<li>籃球</li><br>
+				<li>煮咖啡</li><br>
+				<li>玩手遊</li><br>
 			</ul>
 			<a href="#" class="button">關於我自己</a> </div>
 	</div>
