--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Released   : 20140215
 			</div>
 		<div id="tbox2">
 			<div class="title1">
-				<h2>專長</h2>
+				<h2><span style="color:orange;">專長</span></h2>
 			</div>
 			<ul class="style1">
 				<li>焊接電路板</li><br>
@@ -68,7 +68,7 @@ Released   : 20140215
 			<a href="#" class="button">關於我自己</a> </div>
 		<div id="tbox3">
 			<div class="title1">
-				<h2>興趣</h2>
+				<h2><span style="color:orange;">興趣</span></h2>
 			</div>
 			<ul class="style1">
 				<li>籃球</li><br>
