--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ Released   : 20140215
 			<li><a href="#" class="icon icon-tumblr"><span>Google+</span></a></li>
 			<li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
 		</ul>
+		<marquee>我好帥怎麼辦</marquee>
 </div>
 </body>
 </html>
