--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@ Released   : 20140215
 		echo "你的IP位址是:".$REMOTE_ADDR;
 		?>
 		<ul class="contact">
-			<li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
-			<li><a href="#" class="icon icon-facebook"><span></span></a></li>
+			<li><a href="https://www.instagram.com/ian_0818_/?hl=zh-tw" class="icon icon-instagram"><span>instagram</span></a></li>
+			<li><a href="https://www.facebook.com/" class="icon icon-facebook"><span></span></a></li>
 			<li><a href="#" class="icon icon-dribbble"><span>Pinterest</span></a></li>
 			<li><a href="#" class="icon icon-tumblr"><span>Google+</span></a></li>
 			<li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
-		</ul>
+		</ul><br>
 		<marquee>我好帥怎麼辦</marquee>
 </div>
 </body>
