--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Released   : 20140215
 		?>
 		<ul class="contact">
 			<li><a href="https://www.instagram.com/ian_0818_/?hl=zh-tw" class="icon icon-instagram"><span>instagram</span></a></li>
-			<li><a href="https://www.facebook.com/" class="icon icon-facebook"><span></span></a></li>
+			<li><a href="https://www.facebook.com/profile.php?id=100000355512106" class="icon icon-facebook"><span></span></a></li>
 			<li><a href="#" class="icon icon-dribbble"><span>Pinterest</span></a></li>
 			<li><a href="#" class="icon icon-tumblr"><span>Google+</span></a></li>
 			<li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
