--- a/index.html
+++ b/index.html
@@ -79,25 +79,25 @@ Released   : 20140215
 	</div>
 	<div id="portfolio" class="container">
 		<div class="column1">
-			<div class="box"> <a href="#"><img src="images/scr01.jpg" alt="" class="image image-full" /></a>
+			<div class="box"> <a href="#"><img src="images/i1.png" alt="" class="image image-full" /></a>
 				<h3>Vestibulum venenatis</h3>
 				<p>Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
 				<a href="#" class="button button-small">Etiam posuere</a> </div>
 		</div>
 		<div class="column2">
-			<div class="box"> <a href="#"><img src="images/scr02.jpg" alt="" class="image image-full" /></a>
+			<div class="box"> <a href="#"><img src="images/i2.png" alt="" class="image image-full" /></a>
 				<h3>Praesent scelerisque</h3>
 				<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
 				<a href="#" class="button button-small">Etiam posuere</a> </div>
 		</div>
 		<div class="column3">
-			<div class="box"> <a href="#"><img src="images/scr03.jpg" alt="" class="image image-full" /></a>
+			<div class="box"> <a href="#"><img src="images/i3.png" alt="" class="image image-full" /></a>
 				<h3>Donec dictum metus</h3>
 				<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
 				<a href="#" class="button button-small">Etiam posuere</a> </div>
 		</div>
 		<div class="column4">
-			<div class="box"> <a href="#"><img src="images/scr04.jpg" alt="" class="image image-full" /></a>
+			<div class="box"> <a href="#"><img src="images/i4.png" alt="" class="image image-full" /></a>
 				<h3>Mauris vulputate dolor</h3>
 				<p>Rutrum fermentum nibh in augue praesent urna congue rutrum.</p>
 				<a href="#" class="button button-small">Etiam posuere</a> </div>
