--- a/index.html
+++ b/index.html
@@ -81,25 +81,25 @@ Released   : 20140215
 		<div class="column1">
 			<div class="box"> <a href="#"><img src="images/i1.png" alt="" class="image image-full" /></a>
 				<h3>優勢</h3>
-				<p>Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
+				<p>就讀高職資訊科，對資訊領域的基礎知識，已有基本的專業及實作能力。</p>
 				<a href="#" class="button button-small">Etiam posuere</a> </div>
 		</div>
 		<div class="column2">
 			<div class="box"> <a href="#"><img src="images/i2.png" alt="" class="image image-full" /></a>
 				<h3>劣勢</h3>
-				<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
+				<p>高中三年來，學生對比賽與課業方面較佳，但在英文的方面較弱勢。</p>
 				<a href="#" class="button button-small">Etiam posuere</a> </div>
 		</div>
 		<div class="column3">
 			<div class="box"> <a href="#"><img src="images/i3.png" alt="" class="image image-full" /></a>
 				<h3>機會</h3>
-				<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
+				<p>在學時考取三張乙級證照、比賽經驗略多，在實作方面較佳，往後進入貴校可以靈活運用相關知識及技術。</p>
 				<a href="#" class="button button-small">Etiam posuere</a> </div>
 		</div>
 		<div class="column4">
 			<div class="box"> <a href="#"><img src="images/i4.png" alt="" class="image image-full" /></a>
 				<h3>威脅</h3>
-				<p>Rutrum fermentum nibh in augue praesent urna congue rutrum.</p>
+				<p>學生在英文方面較弱，進入貴校後可能造成學習的進度比較緩慢。</p>
 				<a href="#" class="button button-small">Etiam posuere</a> </div>
 		</div>
 	</div>
